<resources>
    <string name="app_name">PSN Gift Cards Generator</string>
    <string name="start_page_resource_1">PSN\n Code Generator</string>
    <string name="start_page_resource_2">Exchange Coins for\n PLAYSTATION Promo Codes</string>
    <string name="start_page_resource_3">GET STARTED</string>
    <string name="start_page_resource_4">This app &amp; the services offered are not\n  associated, affiliated, endorsed, or\n  sponsored by PLAYSTATION</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="note_text">Note:\nPlease input your correct and true email in order for us to\nsend the rewards to your inbox. We will send the rewards to\nyou within 24–72 hours</string>
    <string name="instructions_part_1">1. Complete easy tasks and get coins.</string>
    <string name="instructions_part_2">2. Generate your personal promo code.</string>
    <string name="instructions_part_3">3. Exchange earned coins for free coupons with generated code.</string>
    <string name="instructions_part_4">4. We will send your coupon with promo code to your email address.</string>
    <string name="instructions_part_5">5. Share received promo code to your friends to use it on PlayStation Network.</string>
    <string name="instructions_part_6">6. They only need to charge their accounts to have fun together.</string>
    <string name="email_edit_text_hint">Input your email</string>
    <string name="redeem_button_text">REDEEM</string>
    <string name="generate_button_text">GENERATE</string>
    <string name="password">*******</string>
    <string name="promo_code_text">PROMO  CODE</string>
    <string name="quick_offers">Quick Offers</string>
    <string name="pro_tasks">Pro Tasks</string>
    <string name="daily_offers">Daily Offers</string>
    <string name="watch_video">Watch Video</string>
    <string name="rate_us">Rate Us</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="redeam_error_title">Error</string>
    <string name="redeam_error_text">Generate code at first, please</string>
    <string name="generate_excellent_title">Excellent</string>
    <string name="generate_excellent_text">You will get your code in 72 hours</string>
    <string name="generate_invalid_email_title">Invalid email</string>
    <string name="generate_invalid_email_text">Your email address is invalid</string>
    <string name="generate_no_email_title">No email address</string>
    <string name="generate_no_email_text">Email address can\'t be blank</string>
    <string name="generate_no_money_title">Sorry</string>
    <string name="generate_no_money_text">You don\'t have enough money</string>
</resources>
