<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gnnsnowszerro.psngiftcardsgenerator.StartActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        android:background="@drawable/logo" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:text="@string/start_page_resource_1"
        android:textAlignment="center"
        android:textColor="@color/colorBlueDark"
        android:textSize="36sp" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/start_page_resource_2"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/start_page_button_style"
        android:text="@string/start_page_resource_3"
        android:textColor="@android:color/white"
        android:textSize="22sp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/start_page_resource_4"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>
