<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:layout_marginRight="8dp"
            android:background="@drawable/coupon_background">
            
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginLeft="24dp"
                android:src="@drawable/ic_file"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlueDark"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/quick_offers"/>

        </FrameLayout>


        <FrameLayout
            android:id="@+id/quick_offers"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="3dp"
            android:background="@drawable/start_page_button_style">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:src="@drawable/ic_play"
                android:layout_gravity="center"/>

        </FrameLayout>
        
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:layout_marginRight="8dp"
            android:background="@drawable/coupon_background">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginLeft="24dp"
                android:src="@drawable/ic_file2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlueDark"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/pro_tasks"/>

        </FrameLayout>


        <FrameLayout
            android:id="@+id/pro_tasks"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="3dp"
            android:background="@drawable/start_page_button_style">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:src="@drawable/ic_play"
                android:layout_gravity="center"/>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:layout_marginRight="8dp"
            android:background="@drawable/coupon_background">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginLeft="24dp"
                android:src="@drawable/ic_file_in_folder"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlueDark"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/daily_offers"/>

        </FrameLayout>


        <FrameLayout
            android:id="@+id/daily_offers"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="3dp"
            android:background="@drawable/start_page_button_style">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:src="@drawable/ic_play"
                android:layout_gravity="center"/>

        </FrameLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:layout_marginRight="8dp"
            android:background="@drawable/coupon_background">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginLeft="24dp"
                android:src="@drawable/ic_video_player"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlueDark"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/watch_video"/>

        </FrameLayout>


        <FrameLayout
            android:id="@+id/watch_video"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="3dp"
            android:background="@drawable/start_page_button_style">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:src="@drawable/ic_play"
                android:layout_gravity="center"/>

        </FrameLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:layout_marginRight="8dp"
            android:background="@drawable/coupon_background">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginLeft="24dp"
                android:src="@drawable/ic_rating"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlueDark"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/rate_us"/>

        </FrameLayout>


        <FrameLayout
            android:id="@+id/rate_us"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="3dp"
            android:background="@drawable/start_page_button_style">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:src="@drawable/ic_play"
                android:layout_gravity="center"/>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>