<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.gnnsnowszerro.psngiftcardsgenerator.GenerateActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/header_redeem_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical|start"
                    android:src="@drawable/ic_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="REDEEM"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </LinearLayout>


            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginRight="60dp"
                android:text="20"
                android:textColor="@color/colorCoinText"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_coin" />
        </FrameLayout>

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="@drawable/rounded_rectangle"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="135dp"
                android:layout_height="75dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/coupon_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorBlueDark"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/coupon_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"/>

            </FrameLayout>


            <TextView
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/promo_code_text"
                android:textAlignment="center"
                android:textColor="@color/colorBlueDark"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="120dp"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/start_page_button_style">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_coin" />

                <TextView
                    android:id="@+id/coupon_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </FrameLayout>

            <TextView
                android:layout_width="125dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/start_page_button_style"
                android:text="@string/password"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="28sp" />

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/generate_button"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/coupon_background"
        android:text="@string/generate_button_text"
        android:textColor="@color/colorBlueDark"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/note_text"
        android:textAlignment="textStart"
        android:textColor="@color/colorBlueDark"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email_edit_text_hint"
        android:maxLines="1"
        android:textAlignment="center"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/redeem_button"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/coupon_background"
        android:text="@string/redeem_button_text"
        android:textColor="@color/colorBlueDark"
        android:textSize="18sp" />

    <FrameLayout
        android:id="@+id/activity_main"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:id="@+id/error"
            android:visibility="gone"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom">

            <LinearLayout
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:id="@+id/banner_view">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/icon"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:id="@+id/title"
                        android:lines="1"
                        android:ellipsize="end"
                        android:text="app name"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textColor="#4e4f53"
                        android:id="@+id/rating"
                        android:textAlignment="center"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:drawableRight="@drawable/star"
                        android:drawableEnd="@drawable/star"
                        android:text="4.3"/>

                </LinearLayout>

                <Button
                    android:layout_width="100dp"
                    android:layout_height="37dp"
                    android:id="@+id/install"
                    android:layout_gravity="center"
                    android:background="#8dc63f"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:text="Install"/>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/click"
                android:background="@android:color/transparent"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:scaleType="fitXY"
                android:id="@+id/privacy"
                android:src="@drawable/privacy_icon"
                android:layout_alignParentLeft="true"/>

        </RelativeLayout>

    </FrameLayout>

</LinearLayout>
